[package]
name = "tetanus"
version = "0.1.4"
description = "Blockchain interaction library (specifically hive) with wasm bindings for javascript"
edition = "2021"
repository = "https://github.com/sicarius97/tetanus"
include = ["Cargo.toml", "src/**/*.rs"]
license = "MIT"
authors = ["sicarius97 <sicarius97@protonmail.com>)", "others"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
wasm-bindgen = { version = "0.2.74" }
ripemd = "0.1.1"
k256 = { version = "0.10", default-features = false, features = ["ecdsa", "sha256", "keccak256", "std"] }
getrandom = { version = "0.2", features = ["js"] }
thiserror = { version = "1.0", default-features = false }
primitive-types = { version = "0.6.1", default-features = false }
generic-array = "0.14.5"
sha2 = { version = "0.9.8", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.17"
quickcheck = "1"
